Fix Creative work videos for mobile view (#116)
* add responsiveness to contact section

* add right marquee data for design hero section

* fix top position for mobile on home page

* fix mobile view for home page

* fix marquee gap on home page

* fix home page from being off centered on mobile view

* remove videos autoplaying for mobile on creative work section

* fix latest works text size on creative page for mobile view

* fix body position in global styles

--- a/src/features/layout/work/work.module.scss
+++ b/src/features/layout/work/work.module.scss
@@ -14,8 +14,21 @@
     flex-direction: column;
     align-items: center;
     gap: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     position: relative;
+
+    .latestWorksText {
+      white-space: nowrap;
+
+      @media screen and (width <= 1000px) {
+        font-size: 8vw;
+      }
+
+      @media screen and (width <= 700px) {
+        white-space: wrap;
+        font-size: 11.5vw;
+      }
+    }
 
     .purpleUnderline {
       font-family: var(--font-source-sans);
